Added user import batch job to topic-service

--- a/config-server/src/main/resources/config/lists-service.yml
+++ b/config-server/src/main/resources/config/lists-service.yml
@@ -36,6 +36,8 @@ resilience4j:
         instances:
             tweet-service:
                 minimum-number-of-calls: 5
+            user-service:
+                minimum-number-of-calls: 5
 feign:
     circuitbreaker:
         enabled: true
