Added service tests

--- a/config-server/src/main/resources/config/api-gateway.yml
+++ b/config-server/src/main/resources/config/api-gateway.yml
@@ -96,6 +96,11 @@ spring:
                     predicates:
                         - Path=/api/v1/email/suggested
 
+                -   id: localization-service
+                    uri: lb://localization-service
+                    predicates:
+                        - Path=/ui/v1/localization/**
+
     zipkin:
         base-url: http://${ZIPKIN_HOST:localhost}:9411
 
